--- a/404.html
+++ b/404.html
@@ -243,10 +243,11 @@
         </div>
     </div>
 </div>
-</nav> 
+</nav>
 <div class="container">
     <section class="section">
-        404 - Page not found
+        <h1 class="title" align="center">404 - Page not found</h1>
+		<p align="center">Please make sure the page you typed is correct, or report that the page doesn't exist via GitHub.</p>
     </section>
 </div>
 
