Fix a broken link -minor fix
Noticed on the Wiki page, under Usage it says "You may download a precompiled binary from our website, or you can build it yourself from the source code.". The "our website" is a link to https://yuzu-emu.org/download/ when it should be https://yuzu-emu.org/downloads/.

--- a/wiki/home/index.html
+++ b/wiki/home/index.html
@@ -298,7 +298,7 @@ yuzu only emulates a subset of Switch hardware and therefore is generally only u
 
 <h2 id="usage">Usage</h2>
 
-<p>You may download a precompiled binary from <a href="https://yuzu-emu.org/download/">our website</a>, or you can build it yourself from the source code.</p>
+<p>You may download a precompiled binary from <a href="https://yuzu-emu.org/download/s">our website</a>, or you can build it yourself from the source code.</p>
 
 <ul>
 <li><strong>Windows</strong>: <a href="https://github.com/yuzu-emu/yuzu/wiki/Building-For-Windows">Windows Build</a></li>
