Fix filepath for linux

--- a/wiki/dumping-decryption-keys-from-a-switch-console/index.html
+++ b/wiki/dumping-decryption-keys-from-a-switch-console/index.html
@@ -335,7 +335,7 @@ menu.</p></li>
 
 <p><code>C:/Users/yourusername/AppData/Roaming/yuzu/keys</code> <em>(for Windows)</em></p>
 
-<p><code>~/.local/share/yuzu-emu/keys</code> <em>(for macOS and Linux)</em></p>
+<p><code>~/.local/share/yuzu/keys</code> <em>(for macOS and Linux)</em></p>
 
 <h5 id="diagram-showing-the-correct-location-of-the-decryption-keys-in-yuzu-s-user-directory-wiki-user-directory">Diagram showing the correct location of the decryption keys in yuzu&rsquo;s <a href="/wiki/user-directory">User Directory</a>.</h5>
 
