fix path for linux

--- a/wiki/user-directory/index.html
+++ b/wiki/user-directory/index.html
@@ -305,7 +305,7 @@
 <ul>
 <li>in old version of yuzu, the user directory used to be the <code>user</code> folder in the same directory as the yuzu executable.</li>
 </ul></li>
-<li>on macOS and Linux, the path is <code>~/.local/share/yuzu-emu/</code>. Note that the folder <code>.local</code> is hidden on most machines, so you need to change the configuration to view it. <strong>Additionally, the <code>config</code> folder is located in <code>~/.config/yuzu-emu/</code></strong>.</li>
+<li>on macOS and Linux, the path is <code>~/.local/share/yuzu/</code>. Note that the folder <code>.local</code> is hidden on most machines, so you need to change the configuration to view it. <strong>Additionally, the <code>config</code> folder is located in <code>~/.config/yuzu-emu/</code></strong>.</li>
 </ul>
 
 <p>There are at least three directories within the user directory: <code>config</code>, <code>nand</code>, and <code>sdmc</code>. For users that have dumped the shared fonts from a Switch console, there will also be a <code>sysdata</code> directory. See below for details about each directory and what data is stored within.</p>
