Make the table scrollable
It overflows the screen

--- a/wiki/switch-homebrew/index.html
+++ b/wiki/switch-homebrew/index.html
@@ -12,10 +12,10 @@
     <meta property="og:url" content="https://yuzu-emu.org/wiki/switch-homebrew/" />
     <meta property="og:description" content="Welcome to the fun and exciting world of Switch homebrew! Things here are brand new and highly technical, so we highly recommend that you don&rsquo;t proceed unless you&rsquo;d like to get your hands dirty. If so, here are the best resources for getting started:  LibTransistor, the homebrew library from the ReSwitched team. LibNx, the homebrew library from the SwitchBrew team.  Available homebrew demos:
    Name Download License Source Notes     Spacenx https://github." />
-<meta name="description" content="Welcome to the fun and exciting world of Switch homebrew! Things here are brand new and highly technical, so we highly recommend that you don&rsquo;t proceed unless you&rsquo;d like to get your hands dirty. If so, here are the best resources for getting started:  LibTransistor, the homebrew library from the ReSwitched team. LibNx, the homebrew library from the SwitchBrew team.  Available homebrew demos:
+    <meta name="description" content="Welcome to the fun and exciting world of Switch homebrew! Things here are brand new and highly technical, so we highly recommend that you don&rsquo;t proceed unless you&rsquo;d like to get your hands dirty. If so, here are the best resources for getting started:  LibTransistor, the homebrew library from the ReSwitched team. LibNx, the homebrew library from the SwitchBrew team.  Available homebrew demos:
    Name Download License Source Notes     Spacenx https://github." />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="https://yuzu-emu.org/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://yuzu-emu.org/logo.png" />
 
     <link rel="icon" href="https://yuzu-emu.org/favicon.ico" />
     <link rel="shortcut icon" href="https://yuzu-emu.org/favicon.ico" type="image/x-icon" />
@@ -25,6 +25,20 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu|Dosis" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.0.2/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://yuzu-emu.org/css/style.css" />
+    <!-- CSS code for this table only, since it overflows the screen. Credit goes to https://stackoverflow.com/a/48736763 -->
+	<style>
+	.scrollabletable1 {
+		display: table;
+		table-layout: fixed;
+		width: 100%;
+	}
+
+	.scrollabletable2 {
+		display: table-cell;
+		overflow-x: auto;
+		width: 100%;
+	}
+    </style>
 
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -301,7 +315,9 @@
 </ul>
 
 <p>Available homebrew demos:</p>
-
+<div class="container">
+<div class="scrollabletable1">
+<div class="scrollabletable2">
 <table>
 <thead>
 <tr>
@@ -395,7 +411,10 @@
 </tr>
 </tbody>
 </table>
-
+</div>
+</div>
+</div>
+                
     </div>
 </section>
 
