Edit CPU requirements

--- a/help/quickstart/index.html
+++ b/help/quickstart/index.html
@@ -319,14 +319,14 @@
 <tbody>
 <tr>
 <td><strong>Minimum (for 2D games)</strong></td>
-<td>Intel Core i3-6100 / AMD Ryzen 5 2500X</td>
+<td>Intel Core i3-6100 / AMD FX-8350</td>
 <td>Intel HD Graphics 530 / Nvidia GeForce GT 710</td>
 <td>8GB</td>
 </tr>
 
 <tr>
 <td><strong>Recommended (for 3D games)</strong></td>
-<td>Intel Core i7-8700k</td>
+<td>Intel Core i7-8700k / AMD Ryzen 5 3600</td>
 <td>Nvidia GTX 1070 Ti</td>
 <td>16GB</td>
 </tr>
