Minor changes on minimum requirements
Old ones had OEM CPUs listed and didn't contemplate Zen2.
I'm open on the opinion of recommending a 1060 6GB, it should be enough for avoiding GPU bottlenecks, and the extra VRAM will be needed in "future updates".

--- a/help/quickstart/index.html
+++ b/help/quickstart/index.html
@@ -319,15 +319,15 @@
 <tbody>
 <tr>
 <td><strong>Minimum (for 2D games)</strong></td>
-<td>Intel Core i3-6100 / AMD Ryzen 5 2500X</td>
-<td>Intel HD Graphics 530 / Nvidia GeForce GT 710</td>
+<td>Intel Core i3-6100 / AMD Ryzen 3 1200</td>
+<td>Intel HD Graphics 520 / Nvidia GeForce GT 1030</td>
 <td>8GB</td>
 </tr>
 
 <tr>
 <td><strong>Recommended (for 3D games)</strong></td>
-<td>Intel Core i7-8700k</td>
-<td>Nvidia GTX 1070 Ti</td>
+<td>Intel Core i7-8700k / AMD Ryzen 7 3700X</td>
+<td>Nvidia GTX 1060</td>
 <td>16GB</td>
 </tr>
 </tbody>
