--- a/help/quickstart/index.html
+++ b/help/quickstart/index.html
@@ -326,7 +326,7 @@
 
 <tr>
 <td><strong>Recommended (for 3D games)</strong></td>
-<td>Intel Core i7-8700k / AMD Ryzen 7 3700X</td>
+<td>Intel Core i7-8700K / AMD Ryzen 7 3700X</td>
 <td>Nvidia GTX 1060</td>
 <td>16GB</td>
 </tr>
