Changes to reflect Vulkan support

--- a/help/quickstart/index.html
+++ b/help/quickstart/index.html
@@ -320,14 +320,14 @@
 <tr>
 <td><strong>Minimum (for 2D games)</strong></td>
 <td>Intel Core i3-6100 / AMD Ryzen 3 1200</td>
-<td>Intel HD Graphics 520 / NVIDIA GeForce GT 1030</td>
+<td>Intel HD Graphics 520 / NVIDIA GeForce GT 1030 / AMD Radeon R7 240</td>
 <td>8GB</td>
 </tr>
 
 <tr>
 <td><strong>Recommended (for 3D games)</strong></td>
 <td>Intel Core i5-8600K / AMD Ryzen 5 3600</td>
-<td>NVIDIA GeForce GTX 1060 6GB</td>
+<td>NVIDIA GeForce GTX 1060 6GB / AMD Radeon RX 470 8GB</td>
 <td>16GB</td>
 </tr>
 </tbody>
@@ -337,11 +337,9 @@
 <li>Our recommended specifications don&rsquo;t guarantee perfect performance in most games, but rather strive to provide a cost effective recommendation while still considering performance.</li>
 </ul>
 
-<p><p style="color:cyan"><b><i>Currently on Windows, an Intel or Nvidia GPU is recommended due to AMD GPU driver issues.</b></i><p></p>
-
 <ul>
-<li><strong>GPUs must support OpenGL 4.5 (or higher) &amp; OpenGL Compatibility profile.</strong><br>
-To find out if your GPU meets these requirements, visit <a href="https://opengl.gpuinfo.org">https://opengl.gpuinfo.org</a> and check your GPU details.<br></li>
+<li><strong>GPUs must support OpenGL 4.5 (or higher) &amp; OpenGL Compatibility profile, or Vulkan 1.1.</strong><br>
+To find out if your GPU meets these requirements, visit <a href="https://opengl.gpuinfo.org">https://opengl.gpuinfo.org</a> or <a href="https://vulkan.gpuinfo.org">https://vulkan.gpuinfo.org</a> and check your GPU details.<br></li>
 </ul>
 
 <p>Sample Image:</p>
