just changing the description to be more accurate
just changing the description to be more accurate; will need to be modified once NVDEC is released from early access into mainline to be fully functioning

--- a/game/1-2-switch/index.html
+++ b/game/1-2-switch/index.html
@@ -347,7 +347,7 @@
 
     <h2>Summary</h2>
     
-    <p>1-2-Switch can only get to the title screen, as you cannot pass the screen where you would need to use gyroscope controls. They are currently not implemented in yuzu.</p>
+    <p>1-2-Switch games will boot with motion control enabled devices. Without NVDEC encoding the background videos will not render.</p>
 
     
 
